# AnalisisdeIntencionv3

./: AnalisisIntencion.h  Bison.h  CMakeLists.txt  Flex.h  ProcesadorTexto.h  main.cpp  utils.h
data/: contar.txt  convencer.txt  describir.txt  informar.txt  stopwords.txt  stopwordsOrdened.txt
libstemmer_c/src_c/: stem_UTF_8_basque.c
