cmake_minimum_required(VERSION 3.26)
project(AnalisisdeIntencionv3)

set(CMAKE_CXX_STANDARD 23)

add_executable(AnalisisdeIntencionv3 main.cpp
        libstemmer_c/include/libstemmer.h
        libstemmer_c/libstemmer/libstemmer_utf8.c
        libstemmer_c/src_c/stem_ISO_8859_1_spanish.c
        libstemmer_c/src_c/stem_ISO_8859_1_basque.c
        libstemmer_c/src_c/stem_ISO_8859_1_catalan.c
        libstemmer_c/src_c/stem_ISO_8859_1_danish.c
        libstemmer_c/src_c/stem_ISO_8859_1_dutch.c
        libstemmer_c/src_c/stem_ISO_8859_1_english.c
        libstemmer_c/src_c/stem_ISO_8859_1_finnish.c
        libstemmer_c/src_c/stem_ISO_8859_1_french.c
        libstemmer_c/src_c/stem_ISO_8859_1_german.c
        libstemmer_c/src_c/stem_ISO_8859_1_indonesian.c
        libstemmer_c/src_c/stem_ISO_8859_1_irish.c
        libstemmer_c/src_c/stem_ISO_8859_1_italian.c
        libstemmer_c/src_c/stem_ISO_8859_1_norwegian.c
        libstemmer_c/src_c/stem_ISO_8859_1_porter.c
        libstemmer_c/src_c/stem_ISO_8859_1_portuguese.c
        libstemmer_c/src_c/stem_ISO_8859_1_swedish.c
        libstemmer_c/src_c/stem_ISO_8859_2_hungarian.c
        libstemmer_c/src_c/stem_ISO_8859_2_romanian.c
        libstemmer_c/src_c/stem_KOI8_R_russian.c
        libstemmer_c/src_c/stem_UTF_8_arabic.c
        libstemmer_c/src_c/stem_UTF_8_armenian.c
        libstemmer_c/src_c/stem_UTF_8_basque.c
        libstemmer_c/src_c/stem_UTF_8_catalan.c
        libstemmer_c/src_c/stem_UTF_8_danish.c
        libstemmer_c/src_c/stem_UTF_8_dutch.c
        libstemmer_c/src_c/stem_UTF_8_english.c
        libstemmer_c/src_c/stem_UTF_8_finnish.c
        libstemmer_c/src_c/stem_UTF_8_french.c
        libstemmer_c/src_c/stem_UTF_8_german.c
        libstemmer_c/src_c/stem_UTF_8_greek.c
        libstemmer_c/src_c/stem_UTF_8_hindi.c
        libstemmer_c/src_c/stem_UTF_8_hungarian.c
        libstemmer_c/src_c/stem_UTF_8_indonesian.c
        libstemmer_c/src_c/stem_UTF_8_irish.c
        libstemmer_c/src_c/stem_UTF_8_italian.c
        libstemmer_c/src_c/stem_UTF_8_lithuanian.c
        libstemmer_c/src_c/stem_UTF_8_nepali.c
        libstemmer_c/src_c/stem_UTF_8_norwegian.c
        libstemmer_c/src_c/stem_UTF_8_porter.c
        libstemmer_c/src_c/stem_UTF_8_portuguese.c
        libstemmer_c/src_c/stem_UTF_8_romanian.c
        libstemmer_c/src_c/stem_UTF_8_russian.c
        libstemmer_c/src_c/stem_UTF_8_serbian.c
        libstemmer_c/src_c/stem_UTF_8_spanish.c
        libstemmer_c/src_c/stem_UTF_8_swedish.c
        libstemmer_c/src_c/stem_UTF_8_tamil.c
        libstemmer_c/src_c/stem_UTF_8_turkish.c
        libstemmer_c/src_c/stem_UTF_8_yiddish.c
        libstemmer_c/runtime/api.c
        libstemmer_c/runtime/utilities.c
        ProcesadorTexto.h
        utils.h
        Flex.h
        Bison.h
        AnalisisIntencion.h
)
